examples/gallery/errors/error_acceptance_false_expect.fsl
// expected-command: check
// expected-result: error
// expected-kind: acceptance
requirements GalleryAcceptanceFalseExpect {
  type K = 0..0
  enum St { New, Done }
  state { st: St }
  init { st = New }

  requirement REQ-1 "Finish operation" {
    action finish(k: K) {
      requires st == New
      st = Done
    }
  }

  acceptance AC-1 "After finishing, the state is not New" {
    finish(0)
    expect st == New
  }
}
